# chat-server

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  Version_History.md  compile_commands.json  gdb.txt  main-pre.py  main.py  setup.sh
.github/actions/setup_base/: action.yml
.github/workflows/: ci.yml  release-tip.yml
src/: FileDescriptor.cpp  FileDescriptor.hpp  IOManager.cpp  IOManager.hpp  TODO.md  chatManager.cpp  chatManager.hpp  chatServer.cpp  chatServer.hpp  commandHandler.cpp  commandHandler.hpp  commands.cpp  commands.hpp  format.hpp  inputManager.cpp  inputManager.hpp  log.cpp  log.hpp  main.cpp  renderManager.cpp  renderManager.hpp  scroller.cpp  scroller.hpp  server.cpp  server.hpp  session.cpp  session.hpp  sessionManager.cpp  sessionManager.hpp
src/command/: commandHandler.cpp  commandHandler.hpp  commands.cpp
src/core/: chatManager.cpp  chatManager.hpp  chatServer.cpp  chatServer.hpp  server.cpp  server.hpp  session.cpp  session.hpp  sessionManager.cpp  sessionManager.hpp
src/debug/: format.hpp  log.hpp
src/io/: IOManager.cpp  IOManager.hpp  inputManager.cpp  inputManager.hpp  renderManager.cpp  renderManager.hpp  scroller.cpp
tests/: session.cpp  session.hpp  spam.sh
